# bomberman_xr

./: .gitignore  CMakeLists.txt  OculusAudio.cmake  OculusOpenXR.cmake  README.md  asset_credits.txt  bomberman_xr.sln  bomberman_xr.vcxproj  bomberman_xr.vcxproj.filters  build.gradle  resource.h  settings.gradle  todo.sh
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  OculusOpenXR.cmake
app/src/main/res/drawable/: ic_launcher_background.xml
assets/animations/: bm_dying.glb  bm_idle.glb  bm_jog_forward.glb  bm_jogging_with_box.glb  bm_silly_dancing.glb
assets/models/: block.glb  block_rock.glb  bomb.glb  bomberman.glb  brick_block.glb  crispy_block.glb  fire.glb  left_hand.glb  right_hand.glb  white_bomberman.glb
dependencies/oculus-adb-driver-2.0/oculus-go-adb-driver-2.0/usb_driver/: android_winusb.inf  source.properties
dependencies/openxr_sdk-1.0.24/: openxr_loader_for_android-1.0.24.pom
dependencies/openxr_sdk-1.0.24/openxr_loader_windows/: OpenXRConfig.cmake  OpenXRConfigVersion.cmake
dependencies/openxr_sdk-1.0.24/openxr_loader_windows/ARM64_uwp/lib/cmake/openxr/: OpenXRTargets-relwithdebinfo.cmake
dependencies/openxr_sdk-1.0.24/openxr_loader_windows/ARM_uwp/lib/cmake/openxr/: OpenXRTargets-relwithdebinfo.cmake  OpenXRTargets.cmake
dependencies/openxr_sdk-1.0.24/openxr_loader_windows/Win32/lib/cmake/openxr/: OpenXRConfigVersion.cmake  OpenXRTargets-relwithdebinfo.cmake
dependencies/openxr_sdk-1.0.24/openxr_loader_windows/Win32_uwp/lib/cmake/openxr/: OpenXRTargets-relwithdebinfo.cmake
dependencies/openxr_sdk-1.0.24/openxr_loader_windows/include/openxr/: openxr_platform_defines.h
dependencies/openxr_sdk-1.0.24/openxr_loader_windows/x64/lib/cmake/openxr/: OpenXRConfig.cmake  OpenXRConfigVersion.cmake  OpenXRTargets-relwithdebinfo.cmake
dependencies/openxr_sdk-1.0.24/openxr_loader_windows/x64_uwp/lib/cmake/openxr/: OpenXRTargets-relwithdebinfo.cmake
dependencies/ovr_audio_spatializer_native_32.0.0/AudioSDK/Include/: OVR_Audio.h  OVR_Audio_DynamicRoom.h
dependencies/ovr_audio_spatializer_native_32.0.0/AudioSDK/Lib/Win32/: ovraudio32.lib
dependencies/ovr_audio_spatializer_native_32.0.0/AudioSDK/Lib/mac64/OVRAudio64.framework/Versions/A/Resources/: Info.plist
dependencies/ovr_audio_spatializer_native_32.0.0/AudioSDK/Lib/x64/: ovraudio64.lib
gradle/wrapper/: gradle-wrapper.properties
help/: links.txt
shaders/glsl/: mesh_instance.frag  mesh_instance.vert
src/: audio.h  audio_oculus_pc.cpp  audio_oculus_quest_2.cpp  config.h  core_header_implementations.cpp  graphics.h  graphics_oculus_pc.cpp  graphics_oculus_quest_2.cpp  graphics_pc.cpp  maths.h  pch.h  platform.h  platform_android.cpp  platform_oculus_pc.cpp  platform_oculus_quest_2.cpp  profiler.h  simulation.cpp  simulation.h  tom_engine.h  tom_std.h
